--- a/viewportAR.css
+++ b/viewportAR.css
@@ -84,7 +84,7 @@
     }
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1201px) and (max-width: 2000px) {
 
     .container-of-shymaa-photos {
         height: 20% !important;
